--- a/public/css/champions.css
+++ b/public/css/champions.css
@@ -24,6 +24,8 @@
   --font-family-primary: "Segoe UI", Arial, sans-serif;
 }
 
+/* section boxes */
+
 *,
 *::before,
 *::after {
@@ -48,14 +50,19 @@ p {
 h1,
 h2,
 h3 {
-  font-weight: 900;
-  line-height: 1;
+    color: var(--clr-ucl-darkblue);
+    font-weight: 900;
+    line-height: 1;
 }
 
 h2,
 h3,
 p {
     margin-bottom: 1em;
+}
+
+section > p {
+    text-align: justify;
 }
 
 img {
@@ -72,9 +79,35 @@ section {
     padding: 3rem 0;
 }
 
+@media (min-width: 40em) {
+    header,
+    section {
+        padding: 7rem 0;
+    }
+}
+
 .container {
     margin-inline: auto;
     width: min(90%, 70.5rem);
+}
+
+.split {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 40em) {
+    .split{
+        flex-direction: row;
+    }
+
+    .split > * {
+        flex-basis: 100%;
+    }
+
+    .split > * + * {
+        margin-left: 2em;
+    }
 }
 
 .container--narrow {
@@ -100,3 +133,6 @@ section {
 .bg-gradient h2 {
     color: var(--clr-ucl-lightcyan)
 }
+
+/* primary header */
+
