--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,8 +172,8 @@ section {
 
 .primary-navigation > *,
 .mobile-nav-toggle {
-    cursor: pointer;
-    position: relative;
+  cursor: pointer;
+  position: relative;
 }
 
 .mobile-nav-toggle {
@@ -206,23 +206,45 @@ section {
   }
 }
 
-.active::after {
+.primary-navigation .nav-link {
+  text-decoration: none;
+  color: var(--clr-ucl-darkblue);
+}
+
+.nav-link.active::after {
   content: "";
   position: absolute;
-  height: 3px;
-  width: 100%;
-  background-color: var(--clr-ucl-darkblue);
   left: 0;
   bottom: -0.5em;
+  width: 100%;
+  height: 3px;
+  background-color: currentColor;
+
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
 }
 
-.primary-navigation a {
-  text-decoration: none;
+.nav-link:not(.active)::after {
+  content: "";
+  position: absolute;
+  left: -2px;
+  bottom: -0.5em;
+  width: 100%;
+  height: 3px;
+  background-color: currentColor;
+  
+  transform: scaleX(0);
+  transition: transform 250ms ease-in;
+
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
 
-.primary-navigation a > [aria-hidden="true"] {
+.nav-link:hover::after {
+  transform: scaleX(1);
+}
+
+.primary-navigation .nav-link > [aria-hidden="true"] {
   font-weight: 700;
   margin-inline-end: 0.75em;
 }
@@ -268,7 +290,7 @@ section {
 }
 
 @media (min-width: 35em) and (max-width: 55em) {
-  .primary-navigation a > span[aria-hidden] {
+  .primary-navigation .nav-link > span[aria-hidden] {
     display: none;
   }
 }
