--- a/public/css/table.css
+++ b/public/css/table.css
@@ -4,6 +4,9 @@
   --clr-ucl-white: #ffffff;
   --clr-ucl-lightcyan: #5af7dc;
   --clr-ucl-pink: #ff16ff;
+  --clr-ucl-grey: #c1c2d5;
+  --clr-ucl-text: #30316e;
+  --clr-ucl-background: #f1f3f8;
 
   --clr-3clr-gradient: linear-gradient(
     to left top,
@@ -22,123 +25,168 @@
   );
 
   --font-family-primary: "Segoe UI", Arial, sans-serif;
+
+  --font-weight--light: 300;
+  --font-weight--regular: 400;
+  --font-weight--semibold: 500;
+  --font-weight--bold: 700;
+
+  --font-size--window_small-th: 14px;
+  --font-size--window_medium-th: 14px;
+  --font-size--window_larg-th: 12px;
+  --font-size--window_small-td: 14px;
+  --font-size--window_medium-td: 14px;
+  --font-size--window_large-td: 16px;
 }
 
 body {
-  background-color: var(--clr-ucl-white);
+  background-color: var(--clr-ucl-background);
   color: var(--clr-ucl-darkblue);
   line-height: 1;
 }
 
-table {
-  background-color: transparent;
-  border-collapse: collapse;
+body > div > section {
+  padding-top: 0;
+}
+
+header.content-header {
+  padding-top: 1.5rem;
+  padding-bottom: 4.5rem;
+}
+
+.grid-box {
+  margin: auto;
+  width: 83%;
+  max-width: 100em;
+  align-content: center;
+  padding: 0.01em 16px;
+}
+
+.grid-box:before,
+.grid-box:after {
+  content: "";
   display: table;
-  border-color: gray;
-  text-indent: initial;
 }
 
-thead {
-  display: table-header-group;
-  vertical-align: middle;
-  border-color: inherit;
-}
-
-tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
-}
-
-tr {
-  display: table-row;
-  vertical-align: inherit;
-  border-color: inherit;
-}
-
-.standings--full .box-standing {
-  border-radius: 4px;
-  box-shadow: 0 6px 12px rgb(0 0 0 / 10%);
-  overflow: hidden;
-}
-
-.standings--full .box-standing .groupname {
+.groupname {
   font-size: 20px;
+  font-weight: var(--font-weight--semibold);
   line-height: 1.3;
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  maragin-inline-start: 0px;
-  margin-inline-end: 0px;
+  color: var(--clr-ucl-text);
+}
+
+a {
+  text-decoration: none;
+}
+
+.box-standing {
+  border-radius: 4px;
+  box-shadow: 0 6px 12px rgb(0 0 0 / 0.1);
+  overflow: hidden;
+  margin-bottom: 48px;
+  padding: 32px 32px 48px;
+  background-color: var(--clr-ucl-white);
 }
 
 .table-standing {
-  margin-bottom: 0;
+  border-collapse: collapse;
   max-width: 100%;
   width: 100%;
+  background-color: var(--clr-ucl-white);
+  margin: 0px auto;
+  line-height: 1.3;
+  font-weight: var(--font-weight--regular);
 }
 
-.standings--full .box-standing > thead > tr > td.table_team-name,
-.standings--full .box-standing > thead > tr > th.table_team-name,
-.standings--full .box-standing tbody > tr > td.table_team-name,
-.standings--full .box-standing tbody > tr > th.table_team-name {
-  width: auto;
-}
-
-.table > caption + thead > tr:first-child > td,
-.table > caption + thead > tr:first-child > th,
-.table > colgroup + thead > tr:first-child > td,
-.table > colgroup + thead > tr:first-child > th,
-.table > thead:first-child > tr:first-child > td,
-.table > thead:first-child > tr:first-child > th {
-  border-top: 0;
-}
-
-.standings--full .box-standing > thead > tr > th,
-.standings--full .box-standing tbody > tr > th {
-  height: auto;
-}
-
-@media (min-width: 960px) {
-  .standings--full .box-standing > thead > tr > td,
-  .standings--full .box-standing > thead > tr > th,
-  .standings--full .box-standing tbody > tr > td,
-  .standings--full .box-standing tbody > tr > th {
-    width: 8%;
-  }
-}
-
-.standings--full .box-standing > thead > tr > td,
-.standings--full .box-standing > thead > tr > th,
-.standings--full .box-standing tbody > tr > td,
-.standings--full .box-standing tbody > tr > th {
+.table-standing tbody tr td,
+.table-standing thead tr th {
+  padding: 8px;
   width: 10%;
+
+  text-align: center;
+  color: var(--clr-ucl-text);
+  font-size: var(--font-size--window_large-td);
 }
 
-.box-standing > tbody > tr > td:first-child,
-.box-standing > tbody > tr > th:first-child,
-.box-standing > thead > tr > td:first-child,
-.box-standing > thead > tr > th:first-child {
+.table-standing > thead > tr > th {
+  font-size: var(--font-size--window_larg-th);
+  border-top: 0;
+  height: auto;
+  padding-top: 0;
+  vertical-align: bottom;
+}
+
+.table-standing thead tr th:not(:last-child) {
+  font-weight: var(--font-weight--regular);
+}
+
+.table-standing tbody tr:not(:last-child) {
+  border-bottom: 0.2px solid var(--clr-ucl-grey);
+}
+
+.standings--full .table-standing .table_team-name_block {
+  align-items: center;
+  color: var(--clr-ucl-text);
+  display: flex;
+  line-height: 1.1;
+  position: relative;
   text-align: left;
-  width: auto;
 }
 
-@media (min-width: 960px) {
-  .box-standing > tbody > tr > th,
-  .box-standing > thead > tr > th {
-    font-size: var(--pk-font-size-xs);
+.standings--full .table-standing .table_team-name_block:after,
+.standings--full .table-standing .table_team-name_block:before {
+  content: " ";
+  display: table;
+}
+
+.standings--full .table-standing .table_team-name_block .team-name {
+  padding-left: 28px;
+  text-align: left;
+  font-weight: var(--font-weight--semibold);
+}
+
+.standings--full .box-standing .table_team-name {
+    width: auto;
+    cursor: pointer;
+  }
+
+@media (max-width: 35em) {
+  .label--big,
+  .table_team-against,
+  .table_team-for,
+  .table_team-goal-diff {
+    display: none;
+  }
+
+  .table-standing tbody tr td {
+    font-size: var(--font-size--window_small-td);
+  }
+
+  .table-standing thead tr th {
+    padding: 0px 8px 8px;
+    font-size: var(--font-size--window_small-th);
   }
 }
 
-.box-standing>tbody>tr>th, .box-standing>thead>tr>th {
-    padding-top: 0;
-    vertical-align: bottom;
+@media (min-width: 35em) and (max-width: 55em) {
+  .label--small,
+  .table_team-against,
+  .table_team-for,
+  .table_team-goal-diff {
+    display: none;
+  }
+
+  .table-standing tbody tr td {
+    font-size: var(--font-size--window_medium-td);
+  }
+
+  .table-standing thead tr th {
+    font-size: var(--font-size--window_medium-th);
+  }
 }
 
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-    border-top: 1px solid #ddd;
-    line-height: 1;
-    padding: 8px;
-    vertical-align: top;
+@media (min-width: 40em) {
+  .label--small {
+    display: none;
+  }
 }
-
