--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -232,7 +233,7 @@ section {
   width: 100%;
   height: 3px;
   background-color: currentColor;
-  
+
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 250ms ease-in;
@@ -303,4 +304,54 @@ section {
     padding-block: 2rem;
     padding-inline: clamp(3rem, 8vw, 10rem);
   }
+}
+
+/*Scroll to Top Button*/
+
+.scrollTopBtn {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  height: 70px;
+  width: 70px;
+
+  background-image: url(../images/upArrow.svg);
+  background-repeat: no-repeat;
+  background-size: 40px;
+  background-position: center;
+
+  border-radius: 50%;
+  border: 2px solid black;
+  background-color: white;
+
+  cursor: pointer;
+}
+
+@supports (backdrop-filter: blur(1rem)) {
+  .transparent-look {
+    background: hsl(0 0% 100% / 0.1);
+    backdrop-filter: blur(1rem);
+
+    background-image: url(../images/upArrow.svg);
+    background-repeat: no-repeat;
+    background-size: 40px;
+    background-position: center;
+    border: transparent;
+  }
+}
+
+@media (max-width: 35em) {
+  .scrollTopBtn, .transparent-look {
+      right: 2px;
+      height: 55px;
+      width: 55px;
+      background-size: 35px;
+  }
+
+  
+  }
+}
+
+@media (min-width: 35em) and (max-width: 55em) {
+  
 }
