--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,9 @@
   --clr-ucl-white: #ffffff;
   --clr-ucl-lightcyan: #5af7dc;
   --clr-ucl-pink: #ff16ff;
+  --clr-ucl-grey: #c1c2d5;
+  --clr-ucl-text: #30316e;
+  --clr-ucl-background: #f1f3f8;
 
   --clr-3clr-gradient: linear-gradient(
     to left top,
@@ -34,6 +37,7 @@
 }
 
 body {
+  background-color: var(--clr-ucl-background);
   font-family: var(--font-family-primary);
   font-weight: 400;
   font-size: 1.3125rem;
@@ -63,6 +67,12 @@ h2,
 h3,
 p {
   margin-bottom: 1em;
+}
+
+@media (max-width: 639px) {
+  .split > div:last-child > h2 {
+    margin-top: 1em;
+  }
 }
 
 .text-justify {
@@ -314,6 +324,7 @@ section {
   right: 10px;
   height: 70px;
   width: 70px;
+  display: none;
 
   background-image: url(../images/upArrow.svg);
   background-repeat: no-repeat;
@@ -337,15 +348,35 @@ section {
     background-size: 40px;
     background-position: center;
     border: transparent;
-    display: block;
   }
 }
 
 @media (max-width: 35em) {
-  .scrollTopBtn, .transparent-look {
-      right: 2px;
-      height: 55px;
-      width: 55px;
-      background-size: 35px;
+  .scrollTopBtn,
+  .transparent-look {
+    right: 2px;
+    height: 55px;
+    width: 55px;
+    background-size: 35px;
   }
+}
+
+/*Fade-in content*/
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+}
+
+.fade-in.appear {
+  opacity: 1;
+}
+
+.from-right {
+}
+
+.from-left {
+}
+
+.from-bottom {
 }
