--- a/public/css/table.css
+++ b/public/css/table.css
@@ -83,9 +83,12 @@ a {
   border-radius: 4px;
   box-shadow: 0 6px 12px rgb(0 0 0 / 0.1);
   overflow: hidden;
-  margin-bottom: 48px;
   padding: 32px 32px 48px;
   background-color: var(--clr-ucl-white);
+}
+
+.box-standing:not(:last-child) {
+  margin-bottom: 48px;
 }
 
 .table-standing {
