--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -1,70 +1,150 @@
-.carousel {
-    position: relative;
-    height: 600px;
-    width: 80%;
-    margin: 0 auto;
+:root {
+  --clr-ucl-darkblue: #00004b;
+  --clr-ucl-blue: #0d3aff;
+  --clr-ucl-white: #ffffff;
+  --clr-ucl-lightcyan: #5af7dc;
+  --clr-ucl-pink: #ff16ff;
+  --clr-ucl-grey: #c1c2d5;
+  --clr-ucl-text: #30316e;
+  --clr-ucl-background: #f1f3f8;
+
+  --font-family-primary: "Segoe UI", Arial, sans-serif;
+
+  --font-weight--light: 300;
+  --font-weight--regular: 400;
+  --font-weight--semibold: 500;
+  --font-weight--bold: 700;
+
+  --font-size--window_small-th: 14px;
+  --font-size--window_medium-th: 14px;
+  --font-size--window_larg-th: 12px;
+  --font-size--window_small-td: 14px;
+  --font-size--window_medium-td: 14px;
+  --font-size--window_large-td: 16px;
 }
 
-.carousel_image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.mySlides {
+  display: none;
 }
 
-.carousel_track-container {
-    height: 100%;
-    position: relative;
+.slideshow_item {
+  vertical-align: middle;
+  width: 100%;
 }
 
-.carousel_track {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.slideshow-container {
+  width: min(90%, 120.5rem);
+  position: relative;
+  margin: auto;
 }
 
-.carousel_slide {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: var(--clr-ucl-white);
+  font-weight: var(--font-weight--bold);
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+
+  -webkit-user-select: none; /* Chrome all / Safari all */
+  -moz-user-select: none; /* Firefox all */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none;
 }
 
-.carousel_button {
-    position:absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: 0;
-    cursor: pointer;
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.carousel_button--left {
-    left: -40px;
+.prev:hover,
+.next:hover {
+  background-color: rgba(0 0 0 / 0.8);
 }
 
-.carousel_button--right {
-    right: -40px;
+.slideshow_item-caption {
+  color: var(--clr-ucl-white);
+  font-size: var(--font-size--window_large-td);
+  font-weight: var(--font-weight--semibold);
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
 }
 
-.carousel_button img {
-    width: 24px;
+.numbertext {
+  color: var(--clr-ucl-white);
+  font-size: var(--font-size--window_small-td);
+  font-weight: var(--font-weight--light);
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
-.carousel_nav {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
+.slideshow-nav {
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
-.carousel_indicator {
-    border: 0;
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-    background: rgba(0, 0, 0, 0.3);
-    margin: 0 12px;
+.nav-dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: var(--clr-ucl-grey);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.carousel_indicator.current-slide {
-    background: rgba(0, 0, 0, 0.75);
+.current,
+.nav-dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  .slideshow_item-caption {
+    font-size: 11px;
+  }
+}
+
+@media (min-width: 40em) {
+  .slideshow-nav {
+    padding: 3rem 0;
+  }
 }
