--- a/public/css/history.css
+++ b/public/css/history.css
@@ -47,9 +47,8 @@
   content: "";
   position: absolute;
   width: 6px;
-  height: calc(100% + 4em);
+  height: 100% ;
   background-color: white;
-  top: -2em;
   bottom: 0;
   left: 50%;
   margin-left: -3px;
@@ -118,9 +117,10 @@
   background-color: white;
   position: relative;
   border-radius: 6px;
+  
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .timeline::after {
     left: 31px;
   }
@@ -140,7 +140,7 @@
 
   .left::after,
   .right::after {
-    left: 15px;
+    left: 19px;
   }
 
   .right {
