--- a/public/css/main.css
+++ b/public/css/main.css
@@ -174,6 +174,7 @@ footer {
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  
 }
 
 .footer-content h3 {
@@ -186,34 +187,9 @@ footer {
 .footer-content p {
   max-width: 500px;
   margin: 10px auto;
+  margin-bottom: 2rem;
   line-height: 28px;
   font-size: 14px;
-}
-
-.socials {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem 0 3rem 0;
-}
-
-.socials li {
-  margin: 0 10px;
-}
-
-.socials a {
-  text-decoration: none;
-  color: var(--clr-ucl-white);
-}
-
-.socials a i {
-  font-size: 1.1rem;
-  transition: color .4s ease
-}
-
-.socials a:hover i {
-  color: aqua;
 }
 
 .footer-bottom {
@@ -226,6 +202,8 @@ footer {
 .footer-bottom p {
   font-size: 14px;
   word-spacing: 2px;
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
 .footer-bottom span {
