--- a/public/css/history.css
+++ b/public/css/history.css
@@ -24,6 +24,8 @@
     #5af7dc
   );
 
+  --clr-timeline-circle: #ff9f55;
+
   --font-family-primary: "Segoe UI", Arial, sans-serif;
 
   --font-weight--light: 300;
@@ -33,7 +35,7 @@
 }
 
 .content-wrapper {
-  background-color: var(--clr-ucl-grey);
+  background-color: var(--clr-ucl-background);
 }
 
 .timeline {
@@ -48,7 +50,7 @@
   position: absolute;
   width: 6px;
   height: 100% ;
-  background-color: white;
+  background-color: var(--clr-ucl-white);
   bottom: 0;
   left: 50%;
   margin-left: -3px;
@@ -67,8 +69,8 @@
   width: 25px;
   height: 25px;
   right: -12px;
-  background-color: white;
-  border: 4px solid #ff9f55;
+  background-color: var(--clr-ucl-white);
+  border: 4px solid var(--clr-timeline-circle);
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -90,9 +92,9 @@
   width: 0;
   z-index: 1;
   right: 30px;
-  border: medium solid white;
+  border: medium solid var(--clr-ucl-white);
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
+  border-color: transparent transparent transparent var(--clr-ucl-white);
 }
 
 .right::before {
@@ -103,9 +105,9 @@
   width: 0;
   z-index: 1;
   left: 30px;
-  border: medium solid white;
+  border: medium solid var(--clr-ucl-white);
   border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
+  border-color: transparent var(--clr-ucl-white) transparent transparent;
 }
 
 .right::after {
@@ -114,10 +116,10 @@
 
 .content {
   padding: 20px 30px;
-  background-color: white;
+  background-color: var(--clr-ucl-white);
   position: relative;
   border-radius: 6px;
-  
+  box-shadow: 0 6px 12px rgb(0 0 0 / 10%);
 }
 
 @media (max-width: 600px) {
@@ -133,9 +135,9 @@
 
   .time-container::before {
     left: 60px;
-    border: medium solid white;
+    border: medium solid var(--clr-ucl-white);
     border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    border-color: transparent var(--clr-ucl-white) transparent transparent;
   }
 
   .left::after,
