--- a/public/css/table.css
+++ b/public/css/table.css
@@ -50,8 +50,12 @@ body > div > section {
 }
 
 header.content-header {
-  padding-top: 4.5rem;
+  padding-top: 0;
   padding-bottom: 4.5rem;
+}
+
+header.content-header > h1 {
+  font-weight: var(--font-weight--bold);
 }
 
 .wrapper-bg-clr-gray {
